Slight Crash on mobile view with user icon fix

--- a/client/src/styles/secondaryHeader.scss
+++ b/client/src/styles/secondaryHeader.scss
@@ -20,3 +20,8 @@
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
 }
+
+i.user {
+  position: relative;
+  right: 6px;
+}
